# zk-proof

./: Anchor.toml  Cargo.toml  package-lock.json  package.json
client/: verify.ts
programs/zk-proof/: Cargo.toml
programs/zk-proof/src/: error.rs  lib.rs  state.rs
programs/zk-proof/src/instructions/: init.rs  mod.rs  proof.rs  verify.rs
