[package]
name = "zk-proof"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zk_proof"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
client = []
no-idl = []
no-log-ix-name = []
anchor-debug = []
custom-panic = []
custom-heap = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
solana-bn254 = "^2.2.0"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]